--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -9,7 +9,7 @@ pgadmin_port: 9876
 services_dir: /var/http
 bitgodine_dir: "{{ services_dir }}/bitgodine"
 dashboard_dir: "{{ bitgodine_dir }}/dashboard"
-docker_dashboard_image: bitgodine_dashboard
+docker_app_image: bitgodine_dashboard
 dashboard_port: 5001
 server_dir: "{{ bitgodine_dir }}/server"
 server_port: 3001
